# workspace-core

./: .gitattributes  .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/docs/: urls.py
backend/apps/login/: backends.py  serializers.py  tests.py  urls.py  views.py
backend/apps/login/templates/login/: login.html
backend/apps/profiles/: serializers.py  services.py  urls.py  views.py
backend/apps/register/: admin.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/register/migrations/: 0001_initial.py  0002_alter_socialaccount_user_alter_user_table.py
backend/apps/register/models/: __init__.py  social_account.py  user.py
backend/apps/register/templates/emails/: verify_email.html  welcome_email.html
backend/config/: settings.py  urls.py
