[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "andrii-chumak",email = "andrii.chumak.dev@gmail.com"}
]
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "drf-spectacular (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
